tests/baselines/reference/computedPropertyNamesDeclarationEmit3_ES6.errors.txt
computedPropertyNamesDeclarationEmit3_ES6.ts(2,5): error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.


==== computedPropertyNamesDeclarationEmit3_ES6.ts (1 errors) ====
    interface I {
        ["" + ""](): void;
        ~~~~~~~~~
!!! error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
    }